--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,6 +6,7 @@ SUBDIRS = \
 	libBlitzAnalyze \
 	libBlitzHdf5 \
 	libBlitzFFTW \
+	libBlitz2DGraphics \
 	lmbs2kit \
 	libArrayToolbox \
 	libsegmentation \
