--- a/src/libsegmentation/Makefile.am
+++ b/src/libsegmentation/Makefile.am
@@ -3,7 +3,7 @@ segmentationincludedir = $(pkgincludedir)/libsegmentation
 
 AM_CXXFLAGS = -Wno-long-long
 AM_CPPFLAGS = -I$(top_srcdir)/src
-AM_LDFLAGS = -version-info @lt_major@:@lt_revision@:@lt_age@
+AM_LDFLAGS = -version-info 1:0:0
 
 segmentationinclude_HEADERS = \
 	EdgeFilter.hh EdgeFilter-inl.hh \
