--- a/src/libIRoCS/Makefile.am
+++ b/src/libIRoCS/Makefile.am
@@ -5,7 +5,7 @@ MOC = @QT4_MOC@
 
 AM_CPPFLAGS = -I$(top_srcdir)/src
 AM_CXXFLAGS = -Wno-long-long
-AM_LDFLAGS = -version-info @lt_major@:@lt_revision@:@lt_age@
+AM_LDFLAGS = -version-info 1:0:0
 
 irocsinclude_HEADERS = \
 	iRoCSFeatures.hh iRoCSFeatures.icc \
