- Added fall-back exception handling in QApplication events - Corrected bug showing one extra dimension in HDF5SelectionDialog - Added output of residual difference in AnisotropicDiffusionFilter

--- a/src/liblabelling_qt4/Makefile.am
+++ b/src/liblabelling_qt4/Makefile.am
@@ -101,6 +101,7 @@ labelling_qt4include_HEADERS = \
     CSVDataIO.hh \
     LabellingMainWidget.hh \
     OrthoViewOverlay.hh \
+    ExceptionAwareApplication.hh \
     PluginInterface.hh
 
 MOC_GEN_SOURCES = \
@@ -185,6 +186,7 @@ MOC_GEN_SOURCES = \
 	moc_SVGDataIO.cc \
 	moc_HDF5DataIO.cc \
 	moc_ColorMapEditorWidget.cc \
+	moc_ExceptionAwareApplication.cc \
 	moc_LabellingMainWidget.cc
 
 libLabelling_qt4_la_SOURCES = \
@@ -273,6 +275,7 @@ libLabelling_qt4_la_SOURCES = \
 	HDF5DataIO.cc \
 	CSVDataIO.cc \
 	LabellingMainWidget.cc \
+	ExceptionAwareApplication.cc \
 	OrthoViewOverlay.cc \
 	ColorMap.cc \
 	IColorMapEditor.cc \
