- Added new Marker constructors - Added memory leak debugging structures to iRoCSFeatures - Extended Marker::copyFromATBNucleus() and Marker::copyToATBNucleus() to copy all relevant meta-data - Added test for Marker::copyFromATBNucleus() and Marker::copyToATBNucleus() - Slight code changes in HoughTransform - Slight code changes in SphericalTensor

--- a/configure.ac
+++ b/configure.ac
@@ -489,6 +489,7 @@ AC_CONFIG_FILES([test/libBlitzFFTW/Makefile])
 AC_CONFIG_FILES([test/libBlitz2DGraphics/Makefile])
 AC_CONFIG_FILES([test/lmbs2kit/Makefile])
 AC_CONFIG_FILES([test/libArrayToolbox/Makefile])
+AC_CONFIG_FILES([test/liblabelling_qt4/Makefile])
 AC_OUTPUT
 
 if test "x$enable_statictools" == "x1"; then
