--- a/src/libArrayToolbox/Makefile.am
+++ b/src/libArrayToolbox/Makefile.am
@@ -6,6 +6,8 @@ AM_CPPFLAGS = -I$(top_srcdir)/src
 AM_CXXFLAGS = -Wno-long-long
 AM_LDFLAGS = -version-info 2:1:1
 
+# Version bump to 2.0.2 pending (Interface extension)
+
 arraytoolboxalgoinclude_HEADERS = \
 	algo/DisjointSets.hh \
 	algo/RootCoordinateTransform.hh \
